dnl Process this file with autoconf to produce a configure script.
AC_INIT(wgen/bm_utils.c)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -lpthread:
AC_CHECK_LIB(pthread, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gettimeofday mktime socket strdup)

TOPDIR=`pwd`
AC_SUBST(TOPDIR)

AC_OUTPUT(make.common Makefile cache/Makefile common/Makefile dbdriver/Makefile wgen/Makefile interfaces/odbc/Makefile appServer/Makefile tools/Makefile datagen/Makefile)
