dnl> Process this file with autoconf to produce a configure script.
AC_INIT(dbt1, 2.1, osdldbt-general@lists.sourceforge.net)
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(config.h)

dnl> Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX

dnl> Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -lpthread:
AC_CHECK_LIB(pthread, main)

dnl> Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/time.h unistd.h)

dnl> Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl> Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gettimeofday mktime socket strdup)

dnl> Configuration options for different databases, PostgreSQL is default.
DATABASE_TO_USE="pgsql"
DBI_NAME="libpq"
AC_ARG_WITH(postgresql,
  [AC_HELP_STRING([--with-postgresql=DIR],
    [Default on. Set to the path of the PostgreSQL's installation, or leave
     unset if the path is already in the compiler search path.])],
  [DATABASE_TO_USE=$withval],
  [DATABASE_TO_USE="pgsql"]
)
AC_ARG_WITH(sapdb,
	[  --with-sapdb],
	[ DATABASE_TO_USE="sapdb" DBI_NAME="odbc" ])

dnl> Set up rules depending on what database is selected.
if test "$DATABASE_TO_USE" = "pgsql"; then
	CFLAGS="-I${DATABASE_TO_USE}/include $CFLAGS"
	CPPFLAGS="-I${DATABASE_TO_USE}/include $CPPFLAGS"
	LDFLAGS="-L${DATABASE_TO_USE}/lib -Wl,-R${DATABASE_TO_USE}/lib $LDFLAGS"
	AC_CHECK_HEADERS(libpq-fe.h, [], AC_MSG_ERROR([libpq headers required]))
	AC_SEARCH_LIBS(PQexec, pq, [], AC_MSG_ERROR([libpq libs required]))
	AC_DEFINE(LIBPQ, 1, [using PostgreSQL])
elif test "$DATABASE_TO_USE" = "sapdb"; then
	dnl>
	dnl> ODBC Library (required)
	dnl>
	AC_CHECK_HEADERS(sql.h sqlext.h sqltypes.h WINDOW.H,
		[],
		[AC_CHECK_HEADERS(/opt/sapdb/interfaces/odbc/incl/sql.h /opt/sapdb/interfaces/odbc/incl/sqlext.h /opt/sapdb/interfaces/odbc/incl/sqltypes.h /opt/sapdb/interfaces/odbc/incl/WINDOW.H,
			[],
			[AC_MSG_ERROR([unixODBC or iODBC required]) ]) ])
	AC_SEARCH_LIBS(SQLDriverConnect,
		sqlod sqlrte,
		,
		AC_MSG_ERROR([SAPDB ODBC library required]))
	AC_DEFINE(ODBC, 1, [using ODBC to SAPDB])
else
        AC_MSG_ERROR('You stink at autoconf!')
fi

TOPDIR=`pwd`
AC_SUBST(TOPDIR)
AC_SUBST(DBI_NAME)
AC_SUBST(DATABASE_TO_USE)

AC_OUTPUT(
make.common 
Makefile 
cache/Makefile 
common/Makefile 
dbdriver/Makefile 
wgen/Makefile 
interfaces/Makefile 
interfaces/odbc/Makefile 
interfaces/libpq/Makefile 
appServer/Makefile 
tools/Makefile 
datagen/Makefile
datagen/main.c
scripts/pgsql/build_db.sh
scripts/pgsql/create_db.sh
scripts/pgsql/create_fk.sh
scripts/pgsql/create_indexes.sh
scripts/pgsql/create_tables.sh
scripts/pgsql/load_db.sh
scripts/pgsql/load_dbproc.sh
scripts/pgsql/set_db_env.sh
scripts/pgsql/set_run_env.sh
scripts/pgsql/start_db.sh
scripts/pgsql/update_statistics.sh
data_collect/dbt1_slave.pl
data_collect/analyzeBT.pl
data_collect/pgsql/dbt1_master.pl
data_collect/pgsql/db_stats.sh
data_collect/pgsql/get_config.sh
src/Makefile
)
